# Neo_Risk_Analysis

./: .gitignore  README.md  main.py  pyproject.toml
backend/: api.py
neo-frontend/: package.json
neo-frontend/src/: App.jsx
neo-frontend/src/components/: Neo2DTab.jsx  Neo3DTab.jsx  NeoHomePage.jsx  NeoTableTab.jsx
src/neo_pipeline/: config.py  ingestor.py  logging.py  runner.py  transform.py
src/neo_pipeline/tests/: test_transform.py
src/neo_pipeline/utils/: utils.py
